@@ -5,6 +5,7 @@
 	- Fixed entries showing improperly on wrong date.
 	- Fixed file uploads through filemanager.
 	- Fixed repeating entries Month select box.
+	- Fixed calendar week selector starting on Monday on footer.
 
 [0.9.7] - Fixed SQL error in tts
         - Fixed table locking in admin -> edit account
